# warc-metadata2rdf

./: .gitignore  pyproject.toml
examples/: example.rdf
warcmetadata/: cli.py  extraction.py
